# crop-suitability-predictor

./: .gitignore  README.md  dependencies.txt  pyproject.toml  setup.py
src/crop_suitability_predictor/config/: cdl_payload.json  config.py
src/crop_suitability_predictor/modules/common/: connection_utils.py
src/crop_suitability_predictor/modules/data/: common_data_utils.py  data_injestion_utils.py  data_transformation_utils.py
src/crop_suitability_predictor/modules/models/: crop_suitability_model.py
src/crop_suitability_predictor/scripts/data/data_injestion/: fetch_cdl_data.py  fetch_historical_max_yield_data.py  fetch_raw_data.py  fetch_soil_data.py  get_ndvi_tiles.py
src/crop_suitability_predictor/scripts/data/data_transformation/: convert_cdl_raster_to_csv.py  data_transformation.py
src/crop_suitability_predictor/scripts/models/: training.py
